Resolved findings